Fixed bug in carousel where people images were squishing

--- a/themes/instanttheatre/sass/_shows.scss
+++ b/themes/instanttheatre/sass/_shows.scss
@@ -649,7 +649,7 @@ ul.tribe-events-grid-view {
 
 .show-cast-container {
   .show-cast-item {
-    max-width: 100px;
+    width: 100px;
     margin: 0 20px;
 
     img {
